Add Images and Description

--- a/index.html
+++ b/index.html
@@ -118,43 +118,108 @@
             <button class="tablinks" onclick="openCity(event, 'SC')">Social and Cultural</button>
             <button class="tablinks" onclick="openCity(event, 'SS')">Sporting Events</button>
             <button class="tablinks" onclick="openCity(event, 'WC')">Wedding and Celebration</button>
+            <button class="tablinks" onclick="openCity(event, 'PC')">Personal Concierge</button>
+            <button class="tablinks" onclick="openCity(event, 'EV')">Event Venue</button>
           </div>
 
           <!-- Tab content -->
           <div id="TE" class="tabcontent" style="display: flex;">
-            <img src="./assets/images/service_tradeshow.jpg" alt="">
+            <img src="./assets/images/services/trade shows.jpg" alt="">
             <div class="tabcontent-info">
               <h3>Trade Show and Exhibitions</h3>
-              <p>We can participate in these events to promote their products or services, engage with potential customers, and create leads.</p>
+              <p>
+                Our Event Flow team collaborates with partners for comprehensive event planning, covering floor plans, booth layouts, and activity scheduling. We guide exhibitors, supervise onsite operations, address challenges, and analyze event progress for continuous improvement. Our adaptive team excels in quick problem-solving and thrives in fast-paced trade fair settings.
+              </p>
               <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
             </div>
           </div>
 
-          <div id="CS" class="tabcontent">
+          <div id="CS" class="tabcontent" style="display: flex;">
+            <img src="./assets/images/services/conference.jpg" alt="">
             <div class="tabcontent-info">
               <h3>Conference and Summit</h3>
-              <p>We can participate in these events to promote their products or services, engage with potential customers, and create leads.</p>
-              <a href="#" class="button" style="background-color: var(--clr-background);">Read More</a>
+              <p>
+                Our team meticulously manages conference budgets, covering all costs. With strong organizational and communication skills, creativity, and versatility, we ensure conferences meet objectives, provide a valuable experience, and leave a lasting impression through effective preparation and implementation.
+              </p>
+              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
             </div>
-            <img src="./assets/images/service_tradeshow.jpg" alt="">
           </div>
 
-          <div id="MC" class="tabcontent">
-            <img src="./assets/images/service_tradeshow.jpg" alt="">
+          <div id="MC" class="tabcontent" style="display: flex;">
+            <img src="./assets/images/services/music.jpg" alt="">
             <div class="tabcontent-info">
               <h3>Music Festival and Concert</h3>
-              <p>We can participate in these events to promote their products or services, engage with potential customers, and create leads.</p>
-              <a href="#" class="button" style="background-color: var(--clr-background);">Read More</a>
+              <p>
+                Our team crafts a comprehensive marketing strategy, utilizing social media, traditional advertising, and online channels. We collaborate with designers for visually appealing materials and PR firms for media coverage. Our professionals ensure flawless event logistics, marketing, and financial management for an engaging and unforgettable participant experience.
+              </p>
+              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
             </div>
           </div>
 
-          <div id="CE" class="tabcontent">
+          <div id="CE" class="tabcontent" style="display: flex;">
+            <img src="./assets/images/services/corporate.jpg" alt="">
             <div class="tabcontent-info">
               <h3>Corporate Events</h3>
-              <p>We can participate in these events to promote their products or services, engage with potential customers, and create leads.</p>
-              <a href="#" class="button" style="background-color: var(--clr-background);">Read More</a>
+              <p>
+                We specialize in creating memorable business events, handling everything from conferences to product launches. Our trained specialists ensure precise execution, managing venue selection, logistics, catering, audio-visual setups, and entertainment. With a reliable network of vendors, we deliver high-quality services at reasonable prices.
+              </p>
+              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
             </div>
-            <img src="./assets/images/service_tradeshow.jpg" alt="">
+          </div>
+
+          <div id="SC" class="tabcontent" style="display: flex;">
+            <img src="./assets/images/services/cultural.jpg" alt="">
+            <div class="tabcontent-info">
+              <h3>Social and Cultural</h3>
+              <p>
+                This role provides an extraordinary chance to immerse attendees in the dynamic world of cultural festivals. From choosing the theme and location to arranging performances, displays, and culinary experiences, our keen eye for detail will guarantee that every part of the event represents the depth and diversity of our client's cultural heritage.
+              </p>
+              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+            </div>
+          </div>
+
+          <div id="SS" class="tabcontent" style="display: flex;">
+            <img src="./assets/images/services/sport.jpg" alt="">
+            <div class="tabcontent-info">
+              <h3>Sporting Events</h3>
+              <p>
+                We've left no stone unturned to make this event smooth and unforgettable. From world-class venues to simple transportation, we aim for the highest comfort and convenience for our audience. Enjoy every moment of the sports spectacle, from heart-pounding track and field to nail-biting basketball. Our event is not just about rivalry; it's about delivering a memorable experience for everyone attending.
+              </p>
+              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+            </div>
+          </div>
+
+          <div id="WC" class="tabcontent" style="display: flex;">
+            <img src="./assets/images/services/wedding.jpg" alt="">
+            <div class="tabcontent-info">
+              <h3>Wedding and Celebration</h3>
+              <p>
+                Specializing in exceptional events like weddings, receptions, anniversaries, and more, we work closely with you to capture your unique style and preferences. From initial consultation to final farewell, our team manages every detail – choosing beautiful locations, handling vendor reservations, and arranging exquisite decor – ensuring a magnificent environment that reflects your desires.
+              </p>
+              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+            </div>
+          </div>
+
+          <div id="PC" class="tabcontent" style="display: flex;">
+            <img src="./assets/images/services/concierge.jpg" alt="">
+            <div class="tabcontent-info">
+              <h3>Personal Concierge</h3>
+              <p>
+                We handle all aspects of your event, ensuring it's flawless and unforgettable. Our professional organizers work closely with you, managing events of all sizes. Let our concierge service handle the details, allowing you to focus on enjoying your event. Contact us to reserve our services for a unique event-planning experience.
+              </p>
+              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+            </div>
+          </div>
+
+          <div id="EV" class="tabcontent" style="display: flex;">
+            <img src="./assets/images/services/event.jpg" alt="">
+            <div class="tabcontent-info">
+              <h3>Event Venue</h3>
+              <p>
+                As industry professionals, our team of professionals has significant expertise and contacts with a wide range of venues, from conference rooms and hotels to outdoor areas and unusual locales. We can suggest the best venue depending on the client's needs, such as the type of event, budget, location, capacity, and theme. By evaluating these factors, we, the event organizers may choose a venue that fits our client's vision and assures a successful and memorable event.
+              </p>
+              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+            </div>
           </div>
 
           <script>
@@ -184,7 +249,9 @@
         <div class="events section">
           <div class="section_title">
             <h2>our <span>events</span></h2>
-            <p>Our team at Event Flow Bangkok understands the importance of creating a seamless and memorable event experience. We provide a broad variety of services to guarantee that every detail of your special occasion is taken care of.</p>
+            <p>
+              Welcome to Event Flow Bangkok, where we understand the significance of crafting seamless and unforgettable event experiences. With a commitment to excellence, our dedicated team offers a diverse range of services, ensuring that every detail of your special occasion is meticulously taken care of.
+            </p>
           </div>
 
           <div class="services_wrapper">
@@ -193,8 +260,10 @@
                 <img src="./assets/images/tradeshow_banner.png" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>Event 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos aut fuga, provident unde soluta voluptas numquam harum minima nihil laudantium?</p>
+                <h3>Tailored Planning for Your Vision:</h3>
+                <p>
+                  At Event Flow Bangkok, our event planners and managers collaborate closely with you to grasp your goals, budget, and the vision you have for your event. Through this partnership, we create a personalized strategy that not only aligns with your individual needs but also surpasses your expectations. From venue selection to event design, production, and logistics, we handle every aspect, ensuring a bespoke approach for each event.
+                </p>
               </div>
             </a>
 
@@ -203,8 +272,8 @@
                 <img src="./assets/images/tradeshow_banner.png" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>Event 2</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ipsam eveniet fugiat, rem error perspiciatis porro rerum. Harum officiis hic totam recusandae doloribus error quia dignissimos temporibus. Omnis voluptatibus qui perspiciatis? Atque, ut asperiores doloremque quasi dolor similique et consequatur.</p>
+                <h3>Aesthetic Excellence in Execution:</h3>
+                <p>Our commitment extends beyond meticulous planning to flawless execution. Event Flow Bangkok takes charge of audiovisual equipment, lighting, staging, and décor, ensuring that every facet of your event is visually appealing and compelling. Our experienced crew works tirelessly to transform your vision into a captivating reality, leaving a lasting impression on your attendees.</p>
               </div>
             </a>
 
@@ -213,8 +282,10 @@
                 <img src="./assets/images/tradeshow_banner.png" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>Event 3</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, aliquid.</p>
+                <h3>Comprehensive Event Management and Marketing:</h3>
+                <p>
+                  Specializing in both event management and marketing, we go beyond the logistics. Our team develops effective marketing campaigns to generate buzz and enthusiasm around your event, ensuring maximum attendance and media attention. During the event, our specialized personnel are on-site to supervise all aspects, managing suppliers and ensuring a seamless flow. This allows you to focus on networking and building relationships, confident that every detail is being expertly handled.
+                </p>
               </div>
             </a>
           </div>
