--- a/services.html
+++ b/services.html
@@ -40,91 +40,98 @@
       <main>
         <div class="services_header section">
           <div class="section_title">
-            <h2>our <span>services.</span></h2>
+            <h2>our <span>services</span></h2>
           </div>
           <p>
-            We're a dedicated team of experienced professionals passionate about crafting unforgettable event experiences. As a go-to event management company, we collaborate closely with clients to tailor our services to their unique needs and goals. Our attention to detail and commitment to quality set us apart, ensuring flawless execution from idea creation to on-site delivery. 
-          </p>
-          <p>
-            Our cohesive team of planners, designers, marketers, and production experts works seamlessly to bring clients' visions to life. Expect personalized attention, innovation, and a commitment to exceeding expectations. Whether it's a business conference, product launch, fundraiser, or private celebration, we have the skills and resources to make it a memorable success. Join us in creating extraordinary events – contact us now to start the journey!
+            Introducing our all-inclusive event planning service, the ultimate stress-free experience! Say goodbye to time-consuming collaboration and endless hours of planning. Our convenient one-stop shop saves you valuable time and effort and guarantees a seamless and unforgettable event for all attendees. Our comprehensive services will transform your vision into reality, leaving you with nothing but blissful memories. Experience the power of streamlined event planning today! Nobody Does It Like Event Flow.
           </p>
         </div>
-
 
         <div class="services_wrapper section">
           <a class="services_cards" href="./services_1.html">
             <div class="services_image">
-              <img src="./assets/images/tradeshow_banner.png" alt="">
+              <img src="./assets/images/services/trade shows.jpg" alt="">
             </div>
             <div class="services_cards_details">
               <h3>Trade Shows and Exhibitions</h3>
-              <p>lorem40</p>
             </div>
           </a>
 
           <a class="services_cards" href="./services_1.html">
             <div class="services_image">
-              <img src="./assets/images/tradeshow_banner.png" alt="">
+              <img src="./assets/images/services/conference.jpg" alt="">
             </div>
             <div class="services_cards_details">
               <h3>Conference and Summit</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae voluptatem non aperiam ut illum eveniet!</p>
             </div>
           </a>
 
           <a class="services_cards" href="./services_1.html">
             <div class="services_image">
-              <img src="./assets/images/tradeshow_banner.png" alt="">
+              <img src="./assets/images/services/music.jpg" alt="">
             </div>
             <div class="services_cards_details">
               <h3>Music Festival and Concert</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae voluptatem non aperiam ut illum eveniet!</p>
             </div>
           </a>
 
           <a class="services_cards" href="./services_1.html">
             <div class="services_image">
-              <img src="./assets/images/tradeshow_banner.png" alt="">
+              <img src="./assets/images/services/corporate.jpg" alt="">
             </div>
             <div class="services_cards_details">
               <h3>Corporate Events</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae voluptatem non aperiam ut illum eveniet!</p>
             </div>
           </a>
 
           <a class="services_cards" href="./services_1.html">
             <div class="services_image">
-              <img src="./assets/images/tradeshow_banner.png" alt="">
+              <img src="./assets/images/services/cultural.jpg" alt="">
             </div>
             <div class="services_cards_details">
               <h3>Social and Cultural</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae voluptatem non aperiam ut illum eveniet!</p>
             </div>
           </a>
 
           <a class="services_cards" href="./services_1.html">
             <div class="services_image">
-              <img src="./assets/images/tradeshow_banner.png" alt="">
+              <img src="./assets/images/services/sport.jpg" alt="">
             </div>
             <div class="services_cards_details">
               <h3>Sporting Events</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae voluptatem non aperiam ut illum eveniet!</p>
             </div>
           </a>
 
           <a class="services_cards" href="./services_1.html">
             <div class="services_image">
-              <img src="./assets/images/tradeshow_banner.png" alt="">
+              <img src="./assets/images/services/wedding.jpg" alt="">
             </div>
             <div class="services_cards_details">
               <h3>Wedding and Celebration</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae voluptatem non aperiam ut illum eveniet!</p>
+            </div>
+          </a>
+
+          <a class="services_cards" href="./services_1.html">
+            <div class="services_image">
+              <img src="./assets/images/services/concierge.jpg" alt="">
+            </div>
+            <div class="services_cards_details">
+              <h3>Personal Concierge</h3>
+            </div>
+          </a>
+
+          <a class="services_cards" href="./services_1.html">
+            <div class="services_image">
+              <img src="./assets/images/services/event.jpg" alt="">
+            </div>
+            <div class="services_cards_details">
+              <h3>Event Venue</h3>
             </div>
           </a>
 
         </div>
       </main>
-      <footer>
+      <!-- <footer>
         <div class="footer_section_wrapper">
           <div class="footer_section footer_heading">
             <h4>Event Flows Bangkok</h4>
@@ -175,7 +182,7 @@
             <a href="" class="button">Signup</a>
           </div>
         </div>
-    </footer>
+    </footer> -->
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
