Big Fixes - Ralph

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
           </div>
 
-          <div id="CS" class="tabcontent" style="display: flex;">
+          <div id="CS" class="tabcontent">
             <img src="./assets/images/services/conference.jpg" alt="">
             <div class="tabcontent-info">
               <h3>Conference and Summit</h3>
@@ -145,7 +145,7 @@
             </div>
           </div>
 
-          <div id="MC" class="tabcontent" style="display: flex;">
+          <div id="MC" class="tabcontent">
             <img src="./assets/images/services/music.jpg" alt="">
             <div class="tabcontent-info">
               <h3>Music Festival and Concert</h3>
@@ -156,7 +156,7 @@
             </div>
           </div>
 
-          <div id="CE" class="tabcontent" style="display: flex;">
+          <div id="CE" class="tabcontent">
             <img src="./assets/images/services/corporate.jpg" alt="">
             <div class="tabcontent-info">
               <h3>Corporate Events</h3>
@@ -167,7 +167,7 @@
             </div>
           </div>
 
-          <div id="SC" class="tabcontent" style="display: flex;">
+          <div id="SC" class="tabcontent">
             <img src="./assets/images/services/cultural.jpg" alt="">
             <div class="tabcontent-info">
               <h3>Social and Cultural</h3>
@@ -178,7 +178,7 @@
             </div>
           </div>
 
-          <div id="SS" class="tabcontent" style="display: flex;">
+          <div id="SS" class="tabcontent">
             <img src="./assets/images/services/sport.jpg" alt="">
             <div class="tabcontent-info">
               <h3>Sporting Events</h3>
@@ -189,7 +189,7 @@
             </div>
           </div>
 
-          <div id="WC" class="tabcontent" style="display: flex;">
+          <div id="WC" class="tabcontent">
             <img src="./assets/images/services/wedding.jpg" alt="">
             <div class="tabcontent-info">
               <h3>Wedding and Celebration</h3>
@@ -200,7 +200,7 @@
             </div>
           </div>
 
-          <div id="PC" class="tabcontent" style="display: flex;">
+          <div id="PC" class="tabcontent">
             <img src="./assets/images/services/concierge.jpg" alt="">
             <div class="tabcontent-info">
               <h3>Personal Concierge</h3>
@@ -211,7 +211,7 @@
             </div>
           </div>
 
-          <div id="EV" class="tabcontent" style="display: flex;">
+          <div id="EV" class="tabcontent">
             <img src="./assets/images/services/event.jpg" alt="">
             <div class="tabcontent-info">
               <h3>Event Venue</h3>
@@ -291,7 +291,7 @@
           </div>
         </div>
 
-        <div class="partners section">
+        <div class="partners">
           <div class="section_title">
             <h2>our partners</h2>
             <p>Our team at Event Flow Bangkok understands the importance of creating a seamless and memorable event experience. We provide a broad variety of services to guarantee that every detail of your special occasion is taken care of.</p>
