Events and Services

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 
       <main>
         <div class="hero-about section">
-          <img src="./assets/images/about_hero.jpg" class="about_hero_image" alt="">
+          <img src="./assets/images/about/about.jpg" class="about_hero_image" alt="">
           <div class="hero_details">
             <h1>Event Flows Bangkok</h1>
             <p>We cater to small-scale, large-scale, and intimate gathering events with hundreds or thousands of attendees.</p>
@@ -55,7 +55,7 @@
             </div>
             <div class="about-info-details">
               <div class="section_title">
-                <h2>about <span>us.</span></h2>
+                <h2>about <span>us</span></h2>
               </div>
               <p>
                 We're a dedicated team of experienced professionals passionate about crafting unforgettable event experiences. As a go-to event management company, we collaborate closely with clients to tailor our services to their unique needs and goals. Our attention to detail and commitment to quality set us apart, ensuring flawless execution from idea creation to on-site delivery. 
@@ -85,7 +85,7 @@
 
           <div class="mission-wrapper">
             <div class="mv-image-wrapper">
-              <img src="./assets/images/services_concert.jpg" alt="">
+              <img src="./assets/images/about/mission.jpg" alt="">
             </div>
             <div class="mission-details-wrapper">
               <div class="section_title">
@@ -111,7 +111,7 @@
               </p>
             </div>
             <div class="mv-image-wrapper">
-              <img src="./assets/images/service_tradeshow.jpg" alt="">
+              <img src="./assets/images/about/vision.jpg" alt="">
             </div>
           </div>
         </div>
