--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           <div class="services_wrapper">
             <a class="services_cards" href="./services_1.html">
               <div class="services_image">
-                <img src="./assets/images/tradeshow_banner.png" alt="">
+                <img src="./assets/images/events/event1.jpg" alt="">
               </div>
               <div class="services_cards_details">
                 <h3>Tailored Planning for Your Vision:</h3>
@@ -269,7 +269,7 @@
 
             <a class="services_cards" href="./services_1.html">
               <div class="services_image">
-                <img src="./assets/images/tradeshow_banner.png" alt="">
+                <img src="./assets/images/events/event2.jpg" alt="">
               </div>
               <div class="services_cards_details">
                 <h3>Aesthetic Excellence in Execution:</h3>
@@ -279,7 +279,7 @@
 
             <a class="services_cards" href="./services_1.html">
               <div class="services_image">
-                <img src="./assets/images/tradeshow_banner.png" alt="">
+                <img src="./assets/images/events/event3.jpg" alt="">
               </div>
               <div class="services_cards_details">
                 <h3>Comprehensive Event Management and Marketing:</h3>
