--- a/services_1.html
+++ b/services_1.html
@@ -83,39 +83,93 @@
 
           <div class="other_services_title">
             <div class="section_title">
-              <h2>other <span>services.</span></h2>
+              <h2>other <span>services</span></h2>
             </div>
             <p>
               We're a dedicated team of experienced professionals passionate about crafting unforgettable event experiences. As a go-to event management company, we collaborate closely with clients to tailor our services to their unique needs and goals. Our attention to detail and commitment to quality set us apart, ensuring flawless execution from idea creation to on-site delivery. 
             </p>
           </div>
-
-          <div class="services_wrapper">
+          <div class="services_wrapper section">
             <a class="services_cards" href="./services_1.html">
               <div class="services_image">
-                <img src="./assets/images/tradeshow_banner.png" alt="">
+                <img src="./assets/images/services/trade shows.jpg" alt="">
               </div>
               <div class="services_cards_details">
                 <h3>Trade Shows and Exhibitions</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae voluptatem non aperiam ut illum eveniet!</p>
               </div>
             </a>
   
-            <div class="services_cards">
-              hello
-            </div>
-            <div class="services_cards">
-              hello
-            </div>
-            <div class="services_cards">
-              hello
-            </div>
-            <div class="services_cards">
-              hello
-            </div>
-            <div class="services_cards">
-              hello
-            </div>
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/services/conference.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Conference and Summit</h3>
+              </div>
+            </a>
+  
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/services/music.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Music Festival and Concert</h3>
+              </div>
+            </a>
+  
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/services/corporate.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Corporate Events</h3>
+              </div>
+            </a>
+  
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/services/cultural.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Social and Cultural</h3>
+              </div>
+            </a>
+  
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/services/sport.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Sporting Events</h3>
+              </div>
+            </a>
+  
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/services/wedding.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Wedding and Celebration</h3>
+              </div>
+            </a>
+  
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/services/concierge.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Personal Concierge</h3>
+              </div>
+            </a>
+  
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/services/event.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Event Venue</h3>
+              </div>
+            </a>
           </div>
         </div>
       </main>
