--- a/services_1.html
+++ b/services_1.html
@@ -89,7 +89,7 @@
               We're a dedicated team of experienced professionals passionate about crafting unforgettable event experiences. As a go-to event management company, we collaborate closely with clients to tailor our services to their unique needs and goals. Our attention to detail and commitment to quality set us apart, ensuring flawless execution from idea creation to on-site delivery. 
             </p>
           </div>
-          <div class="services_wrapper section">
+          <div class="services_wrapper">
             <a class="services_cards" href="./services_1.html">
               <div class="services_image">
                 <img src="./assets/images/services/trade shows.jpg" alt="">
