--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
           <!-- Tab content -->
           <div id="TE" class="tabcontent" style="display: flex;">
-            <img src="./assets/images/services/trade shows.jpg" alt="">
+            <img src="./assets/images/services/trade shows.jpg" alt="" loading='lazy'>
             <div class="tabcontent-info">
               <h3>Trade Show and Exhibitions</h3>
               <p>
@@ -257,7 +257,7 @@
           <div class="services_wrapper">
             <a class="services_cards" href="./services_1.html">
               <div class="services_image">
-                <img src="./assets/images/events/event1.jpg" alt="">
+                <img src="./assets/images/events/event1.jpg" alt="" loading='lazy'>
               </div>
               <div class="services_cards_details">
                 <h3>Tailored Planning for Your Vision:</h3>
